--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,6 @@ runtime/logs/
 tmp/
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
-order-consumer
+product-consumer
 # Dependency directories (remove the comment below to include it)
 # vendor/
