--- a/conf/config.yml
+++ b/conf/config.yml
@@ -17,13 +17,13 @@ redis:
   idle_timeout: 200
 
 elasticsearch:
-  hosts: ["127.0.0.1:9200"]
+  hosts: ["https://127.0.0.1:9200"]
   username: "elastic"
   password: "elastic"
 
 kafka:
-  hosts: ["127.0.0.1:9091"]
-  order-topic: "shop-order"
+  hosts: ["127.0.0.1:9092"]
+  order-topic: "shop-product"
 
 zap:
   log-filepath: 'runtime/logs'
